fix heading vertical alignment

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -120,8 +120,8 @@ header  {
 	margin: auto;
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif;
-	padding: 50px;
-	margin-top: 10vh;
+	padding: 100px;
+
 }
 
 header a{
